--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -752,7 +752,7 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
-default_linemode devicons
+# default_linemode devicons
 default_linemode ranger_icons
 
 
